--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxthub/core": "^0.7.4",
     "nuxt": "^3.13.0",
     "vue": "latest"
   },
